# rust-http-get

./: Cargo.toml  README.md  dfx.json  did.sh
src/rust_http_get_backend/: Cargo.toml  rust_http_get_backend.did
src/rust_http_get_backend/src/: lib.rs
